@@ -1,3 +1,9 @@
+2001-10-08  Aldy Hernandez  <aldyh@redhat.com>
+
+        * arm-opc.h (arm_opcodes): Add cirrus insns.
+
+	* arm-dis.c (print_insn_arm): Add 'I' case.
+
 2001-10-03  Alan Modra  <amodra@bigpond.net.au>
 
 	* po/POTFILES.in: Regenerate.
